refactor : 채팅방 입장/퇴장 로직 분리 및 리팩토링